--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,24 +1,10 @@
 @font-face {
-  font-family: monsterBlack;
-  src: url(../fonts/Montserrat-Bold.ttf);
+  font-family: MontserratsemiBold;
+  src: url(../fonts/Montserrat-SemiBold.ttf);
 }
-
-/*font monsterRegular*/
 @font-face {
-  font-family: monsterRegular;
-  src: url(../fonts/Montserrat-Regular.ttf);
-}
-
-/*font monsterLight*/
-@font-face {
-  font-family: monsterLight;
-  src: url(../fonts/Montserrat-Light.ttf);
-}
-
-/*font monsterBold*/
-@font-face {
-  font-family: monsterBold;
-  src: url(../fonts/Montserrat-Bold.ttf);
+  font-family: ;
+  src: url(../fonts/);
 }
 
 /*Color from left filed*/
