--- a/css/variables.scss
+++ b/css/variables.scss
@@ -3,8 +3,8 @@
   src: url(../fonts/Montserrat-SemiBold.ttf);
 }
 @font-face {
-  font-family: ;
-  src: url(../fonts/);
+  font-family: MontserratLight;
+  src: url(../fonts/Montserrat-Light.ttf);
 }
 
 /*Color from left filed*/
