--- a/css/variables.css
+++ b/css/variables.css
@@ -10,6 +10,7 @@
 /*color bg 1*/
 /*color bg 2*/
 /*color opacity*/
+/*colorfooter*/
 /*size of p content*/
 /*size h1 */
 /*height of input and content form*/
