--- a/css/index_1.scss
+++ b/css/index_1.scss
@@ -1,7 +1,7 @@
 @import "variables";
-
 header {
   text-align: center;
+  padding-bottom: 35px;
   p {
     font-family: MontserratsemiBold, serif;
     padding-top: 20px;
@@ -10,7 +10,6 @@ header {
     letter-spacing: 2px;
   }
   h1 {
-    font-family: MontserratLight, serif;
     color: $color_text;
     letter-spacing: 2px;
     font-size: $size_h;
@@ -18,10 +17,25 @@ header {
   }
 }
 content {
-  background: url("../imgs/bg1.png");
-  background-size: cover;
-  height: auto;
+  @include background("../imgs/bg1.png");
+  position: relative;
+  height: 2000px;
   .content_top {
-    background: url("../imgs/field.png");
+    @include field;
+    margin-top: 40px;
   }
+  .form-control {
+    border-radius: 0;
+    border:0;
+    padding: 25px 10px;
+    margin: 1px;
+  }
+  .btn_choose {
+    padding: 25px 0;
+  }
+  @include on-off;
+}
+
+footer {
+  @include footer;
 }
