--- a/css/variables.scss
+++ b/css/variables.scss
@@ -34,16 +34,85 @@ body {
   margin: 0;
 }
 
-@mixin line_1($bg_url) {
-  text-align: center;
-  background: url($bg_url);
-  height: 35px;
-  margin-top: 30px;
-  background-size: cover;
-}
-
 @mixin background($url) {
   background: url($url);
   background-size: cover;
   height: auto;
+}
+
+@mixin field {
+  @include background("../imgs/field.png");
+  text-align: center;
+  width: 100%;
+  p {
+    color: #fff;
+    font-family: MontserratsemiBold, serif;
+    font-size: $size_p;
+    padding: 20px;
+  }
+}
+@mixin footer {
+  @include field;
+  position: fixed;
+  bottom: 0;
+}
+
+@mixin on-off {
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 45px;
+    height: 30px;
+  }
+
+  .switch input {
+    display: none;
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 30px;
+    width: 30px;
+    left: 1px;
+    bottom: 0;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  input:checked + .slider {
+    background-color: $color_content_left;
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px $color_content_left;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(14px);
+    -ms-transform: translateX(14px);
+    transform: translateX(14px);
+  }
+
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
 }
