--- a/css/variables.css
+++ b/css/variables.css
@@ -17,6 +17,7 @@
 body {
   font-family: MontserratLight, serif;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  width: 100%; }
 
 /*# sourceMappingURL=variables.css.map */
