--- a/css/variables.scss
+++ b/css/variables.scss
@@ -29,7 +29,7 @@ $size_h: 21px;
 /*height of input and content form*/
 $height_input: 60px;
 
-body {
+body, .container {
   font-family: MontserratLight, serif;
   padding: 0;
   margin: 0;
