--- a/css/variables.css
+++ b/css/variables.css
@@ -4,6 +4,9 @@
 @font-face {
   font-family: MontserratLight;
   src: url(../fonts/Montserrat-Light.ttf); }
+@font-face {
+  font-family: MontserratRegular;
+  src: url(../fonts/Montserrat-Light.ttf); }
 /*Color from left filed*/
 /*Color from right filed*/
 /*Color text*/
