--- a/css/index_1.css
+++ b/css/index_1.css
@@ -14,11 +14,14 @@
 /*size of p content*/
 /*size h1 */
 /*height of input and content form*/
-body {
+body, header, content, footer .container {
   font-family: MontserratLight, serif;
   padding: 0;
   margin: 0;
   width: 100%; }
+
+.header-fixed {
+  padding-top: 185px; }
 
 body {
   background: url("../imgs/bg1.png");
