--- a/css/variables.css
+++ b/css/variables.css
@@ -14,10 +14,13 @@
 /*size of p content*/
 /*size h1 */
 /*height of input and content form*/
-body {
+body, header, content, footer .container {
   font-family: MontserratLight, serif;
   padding: 0;
   margin: 0;
   width: 100%; }
+
+.header-fixed {
+  padding-top: 185px; }
 
 /*# sourceMappingURL=variables.css.map */
