--- a/css/variables.scss
+++ b/css/variables.scss
@@ -29,7 +29,7 @@ $size_h: 21px;
 /*height of input and content form*/
 $height_input: 60px;
 
-body, .container {
+body, header,content,footer .container {
   font-family: MontserratLight, serif;
   padding: 0;
   margin: 0;
@@ -118,4 +118,8 @@ body, .container {
   .slider.round:before {
     border-radius: 50%;
   }
+}
+
+.header-fixed{
+  padding-top: 185px;
 }
