--- a/css/index_2.scss
+++ b/css/index_2.scss
@@ -14,7 +14,7 @@ header {
   .header_top {
     text-align: center;
     .back {
-      font-size: 30px;
+      font-size: 40px;
     }
     p {
       font-size: $size_p;
@@ -49,6 +49,8 @@ header {
 }
 
 content {
-
+  p {
+    padding: 20px;
+  }
 }
 
