--- a/css/variables.css
+++ b/css/variables.css
@@ -4,6 +4,9 @@
 @font-face {
   font-family: MontserratLight;
   src: url(../fonts/Montserrat-Light.ttf); }
+@font-face {
+  font-family: MontserratRegular;
+  src: url(../fonts/Montserrat-Regular.ttf); }
 /*Color from left filed*/
 /*Color from right filed*/
 /*Color text*/
@@ -14,13 +17,35 @@
 /*size of p content*/
 /*size h1 */
 /*height of input and content form*/
+/*size back*/
 body, header, content, footer .container {
   font-family: MontserratLight, serif;
   padding: 0;
   margin: 0;
   width: 100%; }
 
+header {
+  padding-top: 20px; }
+
 .header-fixed {
   padding-top: 185px; }
+
+.active {
+  background: #B4B9CE; }
+
+/*button header */
+.header_choose {
+  margin-top: 20px; }
+  .header_choose p {
+    font-family: MontserratRegular, serif;
+    font-size: 11px;
+    padding: 8px 0; }
+    .header_choose p.left {
+      border: 1px solid #000;
+      border-right: 1px solid #000;
+      border-radius: 70px 0 0 70px; }
+    .header_choose p.right {
+      border: 1px solid #000;
+      border-radius: 0 70px 70px 0; }
 
 /*# sourceMappingURL=variables.css.map */
