--- a/css/index_4.scss
+++ b/css/index_4.scss
@@ -5,7 +5,7 @@ body {
     .content_feed_2 {
       padding-top: 30px;
       width: 100%;
-      @include background('../shop/index_4/header.png');
+      @include background('../imgs/header.png');
       .content_feed_2_close {
         @include icon_shop;
         &:hover {
@@ -39,7 +39,7 @@ body {
         @include header_title_h1;
       }
       .icon_remove_banner {
-        background-image: url(../shop/index_4/remove.png);
+        background-image: url(../imgs/remove.png);
         width: 25px;
         height: 26px;
         float: right;
@@ -53,7 +53,7 @@ body {
   content {
     width: 100%;
     padding-bottom: 50px;
-    @include background("../shop/index_4/bg_content.png");
+    @include background("../imgs/bg_content.png");
     margin-top: -40px;
     position: absolute;
     height: 100%;
@@ -113,7 +113,7 @@ body {
           }
         }
         .price_plus {
-          background: url(../shop/index_4/plus.png);
+          background: url(../imgs/plus.png);
           color: $color_text;
           padding: 10px;
           background-size: contain;
