--- a/css/variables.css
+++ b/css/variables.css
@@ -10,11 +10,12 @@
 /*Color from left filed*/
 /*Color from right filed*/
 /*Color text*/
-/*color bg 1*/
+/*color $color_content_12*/
 /*color bg 2*/
 /*color opacity*/
 /*colorfooter*/
 /*size of p content*/
+/*size p small*/
 /*size h1 */
 /*height of input and content form*/
 /*size back*/
@@ -47,5 +48,9 @@ header {
     .header_choose p.right {
       border: 1px solid #000;
       border-radius: 0 70px 70px 0; }
+
+/*button back*/
+.back {
+  font-size: 40px; }
 
 /*# sourceMappingURL=variables.css.map */
