--- a/css/variables.scss
+++ b/css/variables.scss
@@ -19,16 +19,18 @@ $color_content_left: #fd4968;
 $color_content_right: #fc624e;
 /*Color text*/
 $color_text: #02145a;
-/*color bg 1*/
-$color_bg_1: #feb9be;
+/*color $color_content_12*/
+$color_content_12: #FFDED9;
 /*color bg 2*/
 $color_bg_2: #fecdd4;
 /*color opacity*/
-$color_opacity: #e1e2eb;
+$color_opacity: #9AA1BD;
 /*colorfooter*/
 $color_footer: #a3a5bb;
 /*size of p content*/
 $size_p: 13px;
+/*size p small*/
+$size_p_small: 11px;
 /*size h1 */
 $size_h: 21px;
 /*height of input and content form*/
@@ -49,6 +51,7 @@ header {
 @mixin background($url) {
   background: url($url);
   background-size: cover;
+  background-repeat: no-repeat;
   height: auto;
 }
 
@@ -154,4 +157,9 @@ header {
       border-radius: 0 70px 70px 0;
     }
   }
+}
+
+/*button back*/
+.back {
+  font-size:$size_back;
 }
