--- a/css/index_12.css
+++ b/css/index_12.css
@@ -75,30 +75,27 @@ content .banner_content_1 h1 {
   background: #FFDED9;
   width: 100%;
   text-align: left; }
-content .pro_1 .media .media-body {
-  vertical-align: middle;
-  text-align: left; }
-  content .pro_1 .media .media-body h1.media-heading {
-    color: #02145a;
-    font-family: MontserratsemiBold, serif;
-    font-size: 13px; }
-  content .pro_1 .media .media-body p {
-    color: #9AA1BD;
-    font-size: 13px;
-    font-family: MontserratLight, serif; }
-  content .pro_1 .media .media-body img {
-    width: 25px; }
-content .pro_1 .media .media-right {
-  vertical-align: middle;
-  padding-right: 20px; }
-  content .pro_1 .media .media-right img {
-    width: 14px; }
-content img {
-  height: 100px;
-  margin-top: 150px; }
-content h1 {
-  font-size: 21px; }
-content p {
-  font-size: 13px; }
+content .pro_1 .media {
+  background: #fff; }
+  content .pro_1 .media .media-body {
+    vertical-align: middle;
+    text-align: left; }
+    content .pro_1 .media .media-body h1.media-heading {
+      color: #02145a;
+      font-family: MontserratsemiBold, serif;
+      font-size: 13px; }
+    content .pro_1 .media .media-body p {
+      color: #9AA1BD;
+      font-size: 13px;
+      font-family: MontserratLight, serif; }
+    content .pro_1 .media .media-body img {
+      height: 15px;
+      width: 15px;
+      position: absolute; }
+  content .pro_1 .media .media-right {
+    vertical-align: middle;
+    padding-right: 20px; }
+    content .pro_1 .media .media-right img {
+      width: 14px; }
 
 /*# sourceMappingURL=index_12.css.map */
