--- a/css/index_1.css
+++ b/css/index_1.css
@@ -14,6 +14,7 @@
 /*color bg 2*/
 /*color opacity*/
 /*colorfooter*/
+/*color of 12*/
 /*size of p content*/
 /*size p small*/
 /*size h1 */
@@ -86,7 +87,10 @@ content {
       color: #fff;
       font-family: MontserratsemiBold, serif;
       font-size: 13px;
-      padding: 15px; }
+      padding: 15px;
+      margin: 0px; }
+    content .content_top p {
+      margin-bottom: 10px; }
   content .form-group {
     margin-top: -10px;
     margin-bottom: 0; }
@@ -154,6 +158,7 @@ footer {
     color: #fff;
     font-family: MontserratsemiBold, serif;
     font-size: 13px;
-    padding: 15px; }
+    padding: 15px;
+    margin: 0px; }
 
 /*# sourceMappingURL=index_1.css.map */
