--- a/css/index_13.scss
+++ b/css/index_13.scss
@@ -24,6 +24,7 @@ content {
   background: #FEB8C1;
   display: -webkit-inline-box;
   margin-top: 80px;
+  margin-bottom: 50px;
   .banner_content_1 {
     h1 {
       font-family: MontserratRegular, serif;
@@ -32,90 +33,64 @@ content {
       background: #FFDED9;
       width: 100%;
       text-align: left;
-      margin-top: 0px;
+      margin-top: 0;
       margin-bottom: 0;
     }
   }
-  .pro_1 {
-    border-bottom: 1px solid red;
-  }
 
-  .media {
+  .content-view {
+    padding: 20px 0 0 0;
+    margin-bottom: 10px;
     background: #fff;
-    padding-top: 20px;
-    .media-body {
-      vertical-align: middle;
-      text-align: left;
-      h1.media-heading {
-        color: $color_text;
-        font-family: MontserratsemiBold, serif;
-        font-size: $size_p;
-      }
-      p {
-        color: $color_opacity;
-        font-size: $size_p;
-        font-family: MontserratLight, serif;
-        &.icon {
-          margin-left: -5px;
+    h1 {
+      font-size: $size_p;
+      font-family: MontserratsemiBold, serif;
+      padding-top: 0;
+      margin-top: 0;
+    }
+    p {
+      font-size: $size_p;
+      font-family: MontserratLight, serif;
+    }
+    .content-top{
+      padding-bottom: 20px;
+      .img {
+        padding-left: 0;
+        img {
+          height: 50px;
         }
       }
-      img {
-        height: 20px;
-        width: 20px;
-        position: absolute;
-        left: 0;
+      .content-text {
+        text-align: left;
       }
     }
-    .media-right {
-      vertical-align: middle;
-      padding-right: 20px;
-      img {
-        width: 14px;
-      }
-    }
-  }
-
-  .list_price {
-    background: #fff;
-    .money {
+    .content-mid {
+      text-align: center;
+      padding: 10px 0;
+      color: $color_opacity;
+      border-top: 1px solid $color_12;
+      border-bottom: 1px solid #ff607a;
       h1 {
         font-size: $size_h;
         font-family: MontserratLight, serif;
-        margin-top: 15px;
         margin-bottom: 0;
       }
-    }
-    .prop_content {
-      @include field;
-      width: 50%;
-      height: 100%;
+      .container-mid-left {
+        border-right: 1px solid $color_12;
+      }
       p {
-        color: #fff;
-        font-size: $size_p;
-        font-family: MontserratsemiBold, serif;
+        margin-bottom: 0;
+        font-family: MontserratLight, serif;
+        span {
+          font-family:  MontserratsemiBold, serif;
+          color: $color_text;
+        }
       }
     }
   }
+}
 
-  .title_end {
-    p {
-      font-size: $size_p_small;
-      font-family: MontserratRegular,serif;
-      text-align: left;
-      padding: 20px 10px;
-      background: $color_12;
-    }
-  }
-
-  .bottom {
-    margin-bottom: 50px;
-    border: 0;
-    .media {
-      padding-top: 0;
-      .media-heading {
-        line-height: 40px;
-      }
-    }
-  }
+footer {
+  @include footer;
 }
 
