--- a/css/variables.css
+++ b/css/variables.css
@@ -20,7 +20,7 @@
 /*size h1 */
 /*height of input and content form*/
 /*size back*/
-body, header, content, footer .container {
+body, header, content, footer, .container {
   font-family: MontserratLight, serif;
   width: 100%; }
 
