--- a/css/variables.scss
+++ b/css/variables.scss
@@ -29,17 +29,21 @@ $color_opacity: #9AA1BD;
 $color_footer: #a3a5bb;
 /*color of 12*/
 $color_12: #FFCDD5;
+
+$color_16: #FFD1CA;
 /*size of p content*/
 $size_p: 13px;
 /*size p small*/
 $size_p_small: 11px;
 /*size h1 */
 $size_h: 21px;
+
+$size_close: 25px;
 /*height of input and content form*/
 $height_input: 60px;
 /*size back*/
 $size_back: 40px;
-body, header, content, footer .container {
+body, header, content, footer, .container {
   font-family: MontserratLight, serif;
   //padding: 0;
   //margin: 0;
