--- a/css/index_6.css
+++ b/css/index_6.css
@@ -65,7 +65,8 @@ body {
     top: 0;
     width: 100%;
     z-index: 9999;
-    background: rgba(255, 183, 178, 0.72); }
+    background: rgba(255, 183, 178, 0.72);
+    padding-top: 0; }
     body header p {
       padding-top: 42px;
       font-family: MontserratsemiBold, serif;
