--- a/css/index_6.scss
+++ b/css/index_6.scss
@@ -26,6 +26,7 @@ body {
     width: 100%;
     z-index: 9999;
     background: rgba(255, 183, 178, 0.72);
+    padding-top: 0;
     p {
       @include header_title_p;
       padding-top: 40px;
