--- a/css/index_2.css
+++ b/css/index_2.css
@@ -64,13 +64,19 @@ header {
   padding: 30px 0 10px;
   position: fixed;
   color: #02145a;
-  border-bottom: 1px solid #fff; }
+  border-bottom: 1px solid #fff;
+  background: url("../imgs/bg2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: auto;
+  z-index: 9999; }
   header .header_top {
     text-align: center; }
     header .header_top .back {
       font-size: 40px; }
     header .header_top p {
-      font-size: 13px; }
+      font-size: 13px;
+      font-family: MontserratsemiBold, serif; }
   header .search {
     color: #fff;
     margin-top: 25px; }
@@ -91,9 +97,11 @@ header {
       box-shadow: none;
       color: #fff; }
     header .search img {
-      height: 20px; }
+      height: 15px; }
 
 content p {
-  padding: 20px; }
+  padding: 10px 20px;
+  font-size: 24px;
+  font-family: MontserratLight, serif; }
 
 /*# sourceMappingURL=index_2.css.map */
