--- a/css/index_1.css
+++ b/css/index_1.css
@@ -64,8 +64,7 @@ header {
   header p {
     font-family: MontserratsemiBold, serif;
     color: #02145a;
-    font-size: 13px;
-    letter-spacing: 2px; }
+    font-size: 13px; }
   header h1 {
     color: #02145a;
     letter-spacing: 2px;
