--- a/css/index_1.css
+++ b/css/index_1.css
@@ -26,6 +26,8 @@ body, header, content, footer, .container {
 
 header {
   padding-top: 20px; }
+  header p {
+    letter-spacing: 2px; }
 
 .header-fixed {
   padding-top: 185px; }
@@ -64,7 +66,8 @@ header {
   header p {
     font-family: MontserratsemiBold, serif;
     color: #02145a;
-    font-size: 13px; }
+    font-size: 13px;
+    letter-spacing: 2px; }
   header h1 {
     color: #02145a;
     letter-spacing: 2px;
@@ -104,7 +107,8 @@ content {
     background: #fff;
     margin-bottom: 50px; }
     content .btn_choose p {
-      font-size: 13px; }
+      font-size: 13px;
+      color: #02145a; }
   content .switch {
     position: relative;
     display: inline-block;
