--- a/css/index_1.scss
+++ b/css/index_1.scss
@@ -11,6 +11,7 @@ header {
     font-family: MontserratsemiBold, serif;
     color: $color_text;
     font-size: $size_p;
+    letter-spacing: 2px;
   }
   h1 {
     color: $color_text;
@@ -46,6 +47,7 @@ content {
     margin-bottom: 50px;
     p {
       font-size: $size_p;
+      color: $color_text;
     }
   }
   @include on-off;
