--- a/css/index_9.scss
+++ b/css/index_9.scss
@@ -5,12 +5,6 @@ body {
   background-size: cover;
   height: 100%;
   background-repeat: no-repeat;
-  /* .bg-home {
-     background-image: url("../imgs/bg_index9.png");
-     background-size: cover;
-     height: 100%;
-
-   }*/
   .content_9 {
     border-radius: 20px;
     background-color: #fff;
@@ -21,7 +15,6 @@ body {
     box-shadow: -2px 0 45px $color_opacity;
     margin: 130px 25px;
   }
-
   .title_header {
     display: block;
     overflow-y: auto;
@@ -70,15 +63,15 @@ body {
       height: 40px;
     }
   }
-  .content_modal h1 {
-    font-family: monsterRegular;
-    color: #00a5ff;
-    font-size: 40px;
-    padding-left: 5px;
-    letter-spacing: -3px;
-    font-weight: bold;
-    line-height: 30px;
-  }
+  //.content_modal h1 {
+  //  font-family: monsterRegular;
+  //  color: #00a5ff;
+  //  font-size: 40px;
+  //  padding-left: 5px;
+  //  letter-spacing: -3px;
+  //  font-weight: bold;
+  //  line-height: 30px;
+  //}
 
   .content_main {
   }
@@ -93,7 +86,7 @@ body {
   }
 
   .content_main p {
-    font-family: MontserratLight;
+    font-family: MontserratLight,serif;
     font-size: 13px;
     text-align: center;
     color: #02145a;
