--- a/css/variables.scss
+++ b/css/variables.scss
@@ -239,9 +239,9 @@ $margin_price: 0;
   padding-top: 185px;
 }
 
-.active {
-  background: #B4B9CE;
-}
+//.active {
+//  background: #B4B9CE;
+//}
 /*button header */
 .header_choose {
   margin-top: 20px;
